# NodeLite

./: .gitignore  Cargo.toml  DESIGN.md  PERFORMANCE_OPTIMIZATION_FINAL.md  PERF_OPTIMIZATION_PLAN.md  PERF_OPTIMIZATION_RESULTS.md  PERF_OPTIMIZATION_RESULTS_PHASE2.md  PHASE3_NODELISTITEMVIEW_DESIGN.md  README.en.md  README.md  RECONNECT_STORM_DIAGNOSTIC.md  RECONNECT_STORM_FINAL_REPORT.md  deny.toml  tarpaulin.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
config/: server.example.toml
docs/: index.html
nodelite-agent/: Cargo.toml
nodelite-agent/src/: collector.rs  collector_linux.rs  collector_macos.rs  collector_unsupported.rs  runtime.rs  session.rs  support.rs
nodelite-agent/tests/: config.rs  reconnect.rs  token_refresh.rs
nodelite-proto/: Cargo.toml
nodelite-proto/src/: config.rs  lib.rs  message.rs  model.rs  validation.rs
nodelite-proto/src/config/: alerts.rs  defaults.rs  edit.rs  raw.rs  tests.rs
nodelite-proto/src/config/raw/: alerts.rs
nodelite-proto/src/model/tests/: view_tests.rs
nodelite-server/: Cargo.toml  build.rs
nodelite-server/assets/: index-settings.js  index.html  node.html
nodelite-server/src/: admission.rs  agent_logs.rs  app_state.rs  audit.rs  auth.rs  background.rs  cli.rs  fs_security.rs  geoip.rs  handlers.rs  history.rs  lib.rs  lib_tests.rs  main.rs  queue.rs  registry.rs  sanitize.rs  server_logs.rs  startup.rs  (+7 more)
scripts/: check-actions-pinned.sh  check-demo-credentials.sh  install-agent.sh  install-server.sh  test-install-server-summary.sh
ximonitor-agent/: Cargo.toml
ximonitor-server/: Cargo.toml
(+254 files in other folders)
