[package]
name = "nodelite-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base32 = "0.5"
chrono.workspace = true
http.workspace = true
ipnet.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
url.workspace = true
